--- a/Кликер/Кликер.csproj
+++ b/Кликер/Кликер.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Saver.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="Achievements.resx">
       <DependentUpon>Achievements.cs</DependentUpon>
     </EmbeddedResource>
