--- a/Кликер/Кликер.csproj
+++ b/Кликер/Кликер.csproj
@@ -46,26 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Achievements.cs">
+    <Compile Include="Forms\Achievements.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Achievements.Designer.cs">
+    <Compile Include="Forms\Achievements.Designer.cs">
       <DependentUpon>Achievements.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Saver.cs" />
     <Compile Include="Properties\Settings.cs" />
-    <EmbeddedResource Include="Achievements.resx">
+    <EmbeddedResource Include="Forms\Achievements.resx">
       <DependentUpon>Achievements.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
