перенесён файл в соответсвующую папку

--- a/Кликер/Кликер.csproj
+++ b/Кликер/Кликер.csproj
@@ -89,7 +89,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Properties\App.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\1618537234_22-p-fon-dlya-klikera-25.png" />
