--- a/Кликер/app.config
+++ b/Кликер/app.config
@@ -29,7 +29,7 @@
                 <value>0</value>
             </setting>
             <setting name="Hider" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </Кликер.Properties.Settings>
     </userSettings>
